feat(api): auth service
